--- a/playbooks/roles/lang-java/tasks/main.yml
+++ b/playbooks/roles/lang-java/tasks/main.yml
@@ -20,7 +20,7 @@
   ansible.builtin.file:
     state: link
     src: ~/apps/mvnd/bin/mvnd
-    dest: ~/bin/mvnd
+    dest: ~/.local/bin/mvnd
 
 - name: Clone eclipse.jdt.ls
   git:
@@ -53,7 +53,7 @@
   git:
     repo: https://github.com/microsoft/vscode-java-test
     dest: ~/dev/microsoft/vscode-java-test
-    force: true  # npm commands below modify the package.json
+    force: true # npm commands below modify the package.json
     version: main
     single_branch: true
     depth: 1
@@ -77,7 +77,6 @@
     state: directory
     mode: 0700
 
-
 - name: Fetch sjk.jar
   get_url:
     url: https://search.maven.org/remotecontent?filepath=org/gridkit/jvmtool/sjk/0.21/sjk-0.21.jar
@@ -96,13 +95,12 @@
   ansible.builtin.file:
     state: link
     src: ~/apps/async-profiler/bin/asprof
-    dest: ~/bin/asprof
+    dest: ~/.local/bin/asprof
 
 - name: Get jfr converter
   get_url:
     url: https://github.com/jvm-profiling-tools/async-profiler/releases/download/v3.0/converter.jar
     dest: ~/apps/converter.jar
-
 
 - name: Create jmc folder
   file:
@@ -125,7 +123,7 @@
       #!/usr/bin/env bash
       set -Eeuo pipefail
       PATH=$JAVA_HOME/bin:$PATH ~/apps/jmc/jmc
-    dest: ~/bin/jmc
+    dest: ~/.local/bin/jmc
     mode: "755"
 
 - name: Clone vscode-java-decompiler
@@ -134,7 +132,6 @@
     dest: ~/dev/dgileadi/vscode-java-decompiler
     single_branch: true
     depth: 1
-
 
 - name: Create mcs folder
   ansible.builtin.file:
@@ -154,6 +151,17 @@
 - name: Create symlink for mcs
   ansible.builtin.file:
     src: ~/apps/mcs/bin/mcs
-    dest: ~/bin/mcs
+    dest: ~/.local/bin/mcs
     state: link
 
+- name: Clone hprofdap
+  git:
+    repo: https://github.com/mfussenegger/hprofdap.git
+    dest: ~/dev/mfussenegger/hprofdap
+    update: yes
+- name: Build hprofdap
+  command: mvnd package -Dmaven.test.skip=true
+  environment:
+    JAVA_HOME: "{{ lookup('ansible.builtin.env', 'HOME') }}/.m2/jdks/jdk-{{ jdks_23 }}"
+  args:
+    chdir: ~/dev/mfussenegger/hprofdap
