--- a/playbooks/roles/desktop/tasks/main.yml
+++ b/playbooks/roles/desktop/tasks/main.yml
@@ -22,11 +22,11 @@
   ansible.builtin.package:
     name:
       - ttf-firacode-nerd
+      - ttf-font-awesome
       - noto-fonts
       - noto-fonts-emoji
       - ttf-roboto
       - ttf-hack
-
 # - name: Install i3status-rust
 #   become: false
 #   aur:
