--- a/playbooks/roles/jdks/tasks/main.yml
+++ b/playbooks/roles/jdks/tasks/main.yml
@@ -5,13 +5,13 @@
     state: directory
     recurse: true
 
-- name: Install JDK 8
-  ansible.builtin.unarchive:
-    src: "https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u432-b06/OpenJDK8U-jdk_x64_linux_hotspot_8u432b06.tar.gz"
-    dest: ~/.m2/jdks/
-    creates: "~/.m2/jdks/jdk-8"
-    remote_src: true
-
+# - name: Install JDK 8
+#   ansible.builtin.unarchive:
+#     src: "https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u432-b06/OpenJDK8U-jdk_x64_linux_hotspot_8u432b06.tar.gz"
+#     dest: ~/.m2/jdks/
+#     creates: "~/.m2/jdks/jdk-8"
+#     remote_src: true
+#
 - name: Install jdks
   ansible.builtin.unarchive:
     src: "https://github.com/adoptium/temurin{{ item.major }}-binaries/releases/download/jdk-{{ item.version }}/OpenJDK{{ item.major }}U-jdk_x64_linux_hotspot_{{ item.version|replace('+', '_') }}.tar.gz"
